dataset1235/2025-2/2318198438/users/1967357790/executions/2445341515_2332513434.log
== SUBMISSION (2025-09-02 00:11:33)
-- CODE: 
valor = float(input())

valorReais = valor * 0.7

print(round(valorReais, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 5
    print(round(valorReais, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 5
    print(round(valorReais, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 5
    print(round(valorReais, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 5
    print(round(valorReais, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 5
    print(round(valorReais, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 5
    print(round(valorReais, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 5
    print(round(valorReais, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:11:03)
-- CODE: 
valor = float(input())

valorReais = valor * 0.7

print(valorReais)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
6.3
-- GRADE:
75%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:11:39)
-- CODE: 
valor = float(input())

valorReais = valor * 0.7

print(round(valorReais, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
4.2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
6.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
